2005-12-09  Randolph Chung  <tausq@debian.org>

	* hppa-tdep.c (hppa64_dwarf_reg_to_regnum): New funtion.
	(hppa_gdbarch_init): Set dwarf_reg_to_regnum and 
	dwarf2_reg_to_regnum methods.

2005-12-08  Kevin Buettner  <kevinb@redhat.com>

	* NEWS (Changes in GDB 6.4): Delete references indicating that
	the following configurations have been removed: h8300*-*-*,
	mn10300-*-*, and v850-*-*.  These configurations had been
	removed within the 6.4 development cycle, but were later
	restored within the same cycle.

2005-12-08  Nathan Sidwell  <nathan@codesourcery.com>

	Add ms2 support.
	* ms1-tdep.c (ms1_register_type): Check for ms2.
	(ms1_breakpoint_from_pc): ms2 has a different break instruction.
	(ms1_pseudo_register_read, ms1_pseudo_register_write,
	ms1_registers_info): Add ms2.
 	* NEWS (Changes since GDB 6.4): Add ms2

2005-12-08  Randolph Chung  <tausq@debian.org>

	* somread.c (som_symfile_offsets): Iterate through number of sections
	in addrs instead of objfile.

2005-12-07  Daniel Jacobowitz  <dan@codesourcery.com>

	* valops.c (value_struct_elt): Clarify error message.

2005-12-07  Jim Blandy  <jimb@redhat.com>

	* target.c (target_xfer_memory_partial): Doc fix.

	* ax-general.c (ax_reqs): Check stack heights for backward jumps,
	too.  Correctly check height at target.  Doc fixes.

2005-12-06  Michael Snyder  <msnyder@redhat.com>

	* cli/cli-decode.c (add_setshow_string_cmd): Indent.
	(add_setshow_integer_cmd): Indent.

	* inf-ptrace.c: Fix typos in comments.

2005-12-06  Serge Chatroux  <serge.chatroux@st.com>

	* mi/mi-interp.c (mi_interpreter_resume): Route target error
	through the MI.

2005-12-04  Mark Kettenis  <kettenis@gnu.org>

	* amd64obsd-tdep.c: Include "regcache.h" and "bsd-uthread.h".
	(amd64obsd_uthread_reg_offset): New variable.
	(AMD64OBSD_UTHREAD_RSP_OFFSET): New define.
	(amd64obsd_supply_uthread, amd64obsd_collect_uthread): New
	functions.
	(amd64obsd_init_abi): Set supply_uthread and collect_uthread.